more tiny fixes: mbrola caller now also can deal with spaces; cmu-slt-hsmm package is built with proper conf file
git-svn-id: https://mary.opendfki.de/repos/trunk@2245 953a6561-930b-0410-b2a6-db37d1b2ae63